src/pages/Hellodex/Hellodex.module.scss
/* ... */
.battleRecord {
  @include position.abs-anchor($x: 50%, $y: -18px, $y-prop: bottom);
}

.scrollableInstances {
  height: 100%;
  @include spacing.p(10px);
}

.instances {
  @include position.rel;
  display: grid;
  grid-template-columns: repeat(3, minmax(0, 1fr));
  grid-auto-rows: 53px;
  column-gap: 10px;
  row-gap: 10px;
  width: 100%;
  height: 100%;

  .smol & {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
}

.instanceButton {
  grid-area: span 1 / span 1;
  @include flex.row-center;
  column-gap: 8px;
  border-radius: 12px;
  @include aria.outline($radius: 12px);

  &::before {
    border-radius: 12px;
  }

  &.newInstanceButton {
    @include position.sticky($b: 10px);
  }

  .smol & {
    grid-column: span 2;

    &.smolSplit {
      grid-column: span 1;
    }
  }
}

.battleRecordSpacer {
  grid-area: span 1 / span 3;
  height: 20px;

  .smol & {
    grid-area: span 1 / span 1;
  }
}

.empty {
  @include position.abs-fill;
  @include flex.col-center;
  user-select: none;

  .emptyIcon {
    width: 30px;
    min-width: 30px;
    @include spacing.mb(10px);
    opacity: 0.32;
  }

  .emptyLabel {
    max-width: 216px;
    font-size: 12px;
    letter-spacing: 0.1px;
    text-align: center;
    line-height: 15px;
    opacity: 0.64;

    strong {
      font-weight: 600;
    }
  }

  .divider {
    @include flex.row-center;
    @include spacing.my(16px);

    .dividerLine {
      width: 56px;
      height: 1px;
      opacity: 0.08;
      @include transition.apply(background-color);

      [data-showdex-scheme='light'] & {
        background-color: colors.$black;
      }

      [data-showdex-scheme='dark'] & {
        background-color: colors.$white;
      }
    }

    .dividerLabel {
      @include spacing.px(12px);
      // font-style: italic;
      letter-spacing: 0.1px;
      opacity: 0.32;
    }
  }
}

.honkButton {
  @include spacing.mx-auto;
  @include spacing.mt(4px);
}

button.spectateButton {
  @include font.primary(600); // same font-weight as .emptyLabel strong
  font-size: 12px;
  color: inherit;

  &.disabled {
    opacity: 1;
  }

  .spectateButtonLabel {
    font-size: inherit;
    color: inherit;
  }
}

.donations {
  @include spacing.mx-auto;
  font-size: 10px;
  text-align: center;
  line-height: 14px;
  user-select: none;

  &.withBattleRecord {
    @include spacing.mt(40px);
  }
}

.donateButton {
  @include spacing.mx-auto;
}

.donateFootnote {
  max-width: 250px + 10px;
  @include spacing.mx-auto;
  @include spacing.mt(16px);
  @include spacing.p(6px);
  letter-spacing: 0.05px;
  backdrop-filter: blur(3px);
  border-radius: 6px;
  opacity: 0.64;
  @include transition.apply(opacity);

  &.withTitle {
    opacity: 0.4;
  }

  [data-showdex-terrain='glassy'] & {
    backdrop-filter: none;
  }
}

.footer {
  @include position.rel;
  @include flex.row-between;
  flex: 0 0 73px;
  width: 100%;
  height: 73px;
  @include spacing.px(24px);
  @include spacing.pb(2px);
  backdrop-filter: blur(3px);
  border-top: 2px solid;
  @include transition.apply(background-color, border-top-color);
  z-index: 1;

  .smol & {
    justify-content: center;
  }

  [data-showdex-scheme='light'] & {
    background-color: color.alpha(colors.$white, 0.76);
    border-top-color: color.alpha(colors.$white, 0.16);
  }

  [data-showdex-theme='mina'][data-showdex-scheme='light'] & {
    background-color: color.alpha(#FDF2F6, 0.76);
  }

  [data-showdex-scheme='dark'] & {
    background-color: color.alpha(colors.$black, 0.72);
    border-top-color: color.alpha(colors.$gray-darkest, 0.16);
  }

  [data-showdex-theme='mina'][data-showdex-scheme='dark'] & {
    background-color: color.alpha(#7E405D, 0.32);
  }

  [data-showdex-terrain='glassy'] & {
    backdrop-filter: blur(6px);
  }

  [data-showdex-terrain='glassy'][data-showdex-scheme='light'] & {
    background-color: color.alpha(colors.$white, 0.48);
  }

  [data-showdex-terrain='glassy'][data-showdex-theme='mina'][data-showdex-scheme='light'] & {
    background-color: color.alpha(#FDF2F6, 0.48);
  }

  [data-showdex-terrain='glassy'][data-showdex-scheme='dark'] & {
    background-color: color.alpha(colors.$black, 0.48);
  }

  [data-showdex-terrain='glassy'][data-showdex-theme='mina'][data-showdex-scheme='dark'] & {
    background-color: color.alpha(#7E405D, 0.24);
  }
}

.links {
  @include flex.row($align: center);
  column-gap: 8px;

  [data-showdex-scheme='light'] & {
    color: colors.$gray-dark;
  }
}

.settingsButton {
  min-width: 68px;
  height: 44px;

  // bad idea, looks weird on non-Retina displays while changing color
  /* .settingsIcon {
    @include transition.apply((transform, 10s));
  }

  &:hover .settingsIcon {
    transform: rotateZ(360deg);
  } */
}

/* .linkSeparator {
  width: 1px;
  height: 28px;
  @include transition.apply(background-color);

  .light & {
    background-color: color.alpha(colors.$gray-darkest, 0.16);
  }

  .dark & {
    background-color: color.alpha(colors.$white, 0.16);
  }
} */
/* ... */

